split into projects for updates